--- a/boutique.html
+++ b/boutique.html
@@ -7,6 +7,27 @@
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
+      <!-- HEADER FIXE -->
+<header>
+  <div class="top-marquee">
+    <marquee behavior="scroll" direction="left">
+      who needs drugs when i can look at your eyes elena?
+    </marquee>
+  </div>
+  <nav class="main-nav">
+    <ul class="left-nav">
+      <li><a href="index.html">Portfolio</a></li>
+      <li><a href="boutique.html">Boutique</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+    <div class="logo-container">
+      <img src="logo-chat.png" alt="Logo" />
+    </div>
+    <ul class="right-nav">
+      <!-- vide pour l’instant -->
+    </ul>
+  </nav>
+</header>
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: black;
