--- a/boutique.html
+++ b/boutique.html
@@ -3,219 +3,239 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Poster MBK</title>
+  <title>Poster MBK – Studio Hikaïa</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      <!-- HEADER FIXE -->
-<header>
-  <div class="top-marquee">
-    <marquee behavior="scroll" direction="left">
-      who needs drugs when i can look at your eyes elena?
-    </marquee>
-  </div>
-  <nav class="main-nav">
-    <ul class="left-nav">
-      <li><a href="index.html">Portfolio</a></li>
-      <li><a href="boutique.html">Boutique</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-    <div class="logo-container">
-      <img src="logo-chat.png" alt="Logo" />
-    </div>
-    <ul class="right-nav">
-      <!-- vide pour l’instant -->
-    </ul>
-  </nav>
-</header>
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: black;
+      background-color: #000;
       color: white;
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
     }
+    header {
+      width: 100%;
+      background-color: #000;
+      color: white;
+      font-family: 'Helvetica Neue', sans-serif;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .top-marquee {
+      background-color: #000;
+      color: white;
+      padding: 5px 0;
+      font-size: 14px;
+      text-transform: uppercase;
+      border-bottom: 1px solid #444;
+    }
+    .main-nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 40px;
+    }
+    .main-nav ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .main-nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 15px;
+    }
+    .logo-container img {
+      height: 40px;
+      filter: brightness(0) invert(1);
+    }
+
     .container {
       display: flex;
-      flex-wrap: wrap;
-      padding: 50px;
-      justify-content: center;
+      padding: 60px;
+      justify-content: space-between;
+      align-items: flex-start;
       gap: 60px;
     }
-    .left {
+    .gallery {
       max-width: 500px;
-      position: relative;
+      flex: 1;
     }
-    .carousel {
+    .gallery img {
       width: 100%;
-      overflow: hidden;
-      position: relative;
+      height: auto;
+      border-radius: 5px;
     }
-    .carousel img {
-      width: 100%;
-      border-radius: 12px;
-      object-fit: cover;
-    }
-    .carousel-thumbnails {
+    .thumbnails {
       display: flex;
-      justify-content: center;
-      margin-top: 15px;
       gap: 10px;
+      margin-top: 10px;
     }
-    .carousel-thumbnails img {
-      width: 60px;
-      height: 60px;
+    .thumbnails img {
+      width: 80px;
+      height: 80px;
       object-fit: cover;
       cursor: pointer;
-      border-radius: 6px;
+      border-radius: 5px;
       opacity: 0.5;
+      transition: opacity 0.3s;
     }
-    .carousel-thumbnails img.active {
+    .thumbnails img.active {
       opacity: 1;
-      border: 2px solid white;
+      border: 1px solid white;
     }
-    .nav-arrow {
-      position: absolute;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 30px;
-      color: white;
-      cursor: pointer;
-      user-select: none;
+    .product-details {
+      flex: 1;
     }
-    .nav-arrow.left {
-      left: -40px;
-    }
-    .nav-arrow.right {
-      right: -40px;
-    }
-    .right {
-      max-width: 400px;
-    }
-    .title {
-      font-size: 26px;
-      margin-bottom: 10px;
+    .product-details h1 {
+      font-size: 28px;
+      font-weight: 700;
+      margin-bottom: 5px;
     }
     .stock {
       color: white;
+      font-size: 14px;
       display: flex;
       align-items: center;
-      font-size: 14px;
-      margin-bottom: 25px;
+      gap: 8px;
     }
-    .dot {
-      width: 10px;
-      height: 10px;
-      background-color: green;
+    .stock::before {
+      content: "";
+      width: 8px;
+      height: 8px;
+      background-color: lime;
       border-radius: 50%;
       display: inline-block;
-      margin-right: 8px;
     }
-    .options {
+    .selectors {
+      margin: 20px 0;
+    }
+    .selectors label {
+      display: block;
+      margin-bottom: 10px;
+      font-size: 14px;
+      text-transform: uppercase;
+      color: #aaa;
+    }
+    .option-group {
       display: flex;
       gap: 10px;
-      margin-bottom: 25px;
     }
-    .options button {
-      border: 1px solid white;
-      background-color: transparent;
+    .option-group button {
+      background: transparent;
       color: white;
+      border: 1px solid white;
+      border-radius: 9999px;
       padding: 8px 18px;
-      border-radius: 20px;
       cursor: pointer;
-    }
-    .options button.active {
-      font-weight: bold;
-      border-color: white;
-    }
-    .buy-button {
-      width: 100%;
-      padding: 12px;
-      background-color: white;
-      color: black;
-      font-weight: bold;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-    .desc {
       font-size: 14px;
-      margin-top: 30px;
+      transition: all 0.3s ease;
     }
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        padding: 20px;
-      }
-      .nav-arrow.left, .nav-arrow.right {
-        display: none;
-      }
+    .option-group button.selected {
+      border: 2px solid white;
+      font-weight: 600;
+    }
+    .price-button {
+      margin-top: 20px;
+    }
+    .price-button a {
+      display: inline-block;
+      background: white;
+      color: black;
+      text-align: center;
+      text-decoration: none;
+      padding: 12px 25px;
+      font-weight: 600;
+      font-size: 16px;
+      border-radius: 5px;
+    }
+    .description {
+      margin-top: 25px;
+      font-size: 14px;
+      color: #ccc;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="left">
-      <div class="carousel">
-        <span class="nav-arrow left" onclick="changeSlide(-1)">&#10094;</span>
-        <img id="main-img" src="poster-mbk.jpg" alt="Poster MBK" />
-        <span class="nav-arrow right" onclick="changeSlide(1)">&#10095;</span>
+  <!-- HEADER -->
+  <header>
+    <div class="top-marquee">
+      <marquee behavior="scroll" direction="left">
+        who needs drugs when i can look at your eyes elena?
+      </marquee>
+    </div>
+    <nav class="main-nav">
+      <ul class="left-nav">
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="logo-container">
+        <img src="logo-chat.png" alt="Logo Hikaïa">
       </div>
-      <div class="carousel-thumbnails">
-        <img src="poster-mbk.jpg" class="thumb active" onclick="selectSlide(0)" />
-        <img src="poster-levres.jpg" class="thumb" onclick="selectSlide(1)" />
-        <img src="extra1.jpg" class="thumb" onclick="selectSlide(2)" />
-        <img src="extra2.jpg" class="thumb" onclick="selectSlide(3)" />
+      <ul class="right-nav"></ul>
+    </nav>
+  </header>
+
+  <!-- PAGE PRODUIT -->
+  <main class="container">
+    <div class="gallery">
+      <img id="main-img" src="poster-mbk.jpg" alt="Poster MBK">
+      <div class="thumbnails">
+        <img src="poster-mbk.jpg" class="active" onclick="switchImage(this)">
+        <img src="poster-levres.jpg" onclick="switchImage(this)">
+        <img src="extra1.jpg" onclick="switchImage(this)">
+        <img src="extra2.jpg" onclick="switchImage(this)">
       </div>
     </div>
-    <div class="right">
-      <div class="title">Poster "MBK"</div>
-      <div class="stock"><span class="dot"></span> Item is in stock</div>
-      <div class="options" id="choice">
-        <button class="active" onclick="selectPoster(0)">1</button>
-        <button onclick="selectPoster(1)">2</button>
+
+    <div class="product-details">
+      <h1>Poster "MBK"</h1>
+      <div class="stock">Item is in stock</div>
+
+      <div class="selectors">
+        <label>Choix :</label>
+        <div class="option-group">
+          <button class="selected" onclick="selectChoice(this)">1</button>
+          <button onclick="selectChoice(this)">2</button>
+        </div>
       </div>
-      <div class="options">
-        <button class="active">40x60cm</button>
+
+      <div class="selectors">
+        <label>Taille :</label>
+        <div class="option-group">
+          <button class="selected">40x60cm</button>
+        </div>
       </div>
-      <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402" target="_blank">
-        <button class="buy-button">Buy Now</button>
-      </a>
-      <div class="desc">
-        Poster artistique – édition exclusive signée Studio Hikaïa.<br />
-        25 exemplaires seulement.<br /><br />
-        • ALL SALES ARE FINAL :)<br />
-        • 1/2 WEEKS DELIVERY<br />
+
+      <div class="price-button">
+        <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402">Buy now – 25€</a>
+      </div>
+
+      <div class="description">
+        Poster artistique – édition exclusive signée Studio Hikaïa.<br>
+        25 exemplaires seulement.<br><br>
+        • ALL SALES ARE FINAL :)<br>
+        • 1/2 WEEKS DELIVERY<br>
         • No return & refund
       </div>
     </div>
-  </div>
+  </main>
+
   <script>
-    const images = ["poster-mbk.jpg", "poster-levres.jpg", "extra1.jpg", "extra2.jpg"];
-    let currentSlide = 0;
-
-    function updateCarousel() {
-      document.getElementById("main-img").src = images[currentSlide];
-      document.querySelectorAll(".thumb").forEach((img, i) => {
-        img.classList.toggle("active", i === currentSlide);
-      });
+    function switchImage(el) {
+      document.getElementById('main-img').src = el.src;
+      document.querySelectorAll('.thumbnails img').forEach(img => img.classList.remove('active'));
+      el.classList.add('active');
     }
 
-    function changeSlide(n) {
-      currentSlide = (currentSlide + n + images.length) % images.length;
-      updateCarousel();
-    }
-
-    function selectSlide(index) {
-      currentSlide = index;
-      updateCarousel();
-    }
-
-    function selectPoster(index) {
-      currentSlide = index;
-      updateCarousel();
-      document.querySelectorAll("#choice button").forEach((b, i) => {
-        b.classList.toggle("active", i === index);
-      });
+    function selectChoice(btn) {
+      document.querySelectorAll('.option-group button').forEach(b => b.classList.remove('selected'));
+      btn.classList.add('selected');
     }
   </script>
 </body>
