--- a/index.html
+++ b/index.html
@@ -1,28 +1,117 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Studio Hikaïa</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portfolio – Studio Hikaïa</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #000;
+      color: white;
+      font-family: 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      width: 100%;
+      background-color: #000;
+      color: white;
+      font-family: 'Helvetica Neue', sans-serif;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .top-marquee {
+      background-color: #000;
+      color: white;
+      padding: 5px 0;
+      font-size: 14px;
+      text-transform: uppercase;
+      border-bottom: 1px solid #444;
+    }
+    .main-nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 15px 40px;
+    }
+    .main-nav ul {
+      display: flex;
+      gap: 20px;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .main-nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 15px;
+    }
+    .logo-container img {
+      height: 40px;
+      filter: brightness(0) invert(1);
+    }
+
+    .portfolio-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      padding: 40px;
+    }
+    .portfolio-item {
+      position: relative;
+      overflow: hidden;
+      border-radius: 10px;
+    }
+    .portfolio-item img {
+      width: 100%;
+      height: auto;
+      display: block;
+      transition: transform 0.4s ease;
+    }
+    .portfolio-item:hover img {
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
+  <!-- HEADER -->
   <header>
-    <h1>Studio Hikaïa</h1>
-    <nav>
-      <a href="index.html">Accueil</a>
-      <a href="boutique.html">Boutique</a>
-      <a href="contact.html">Contact</a>
+    <div class="top-marquee">
+      <marquee behavior="scroll" direction="left">
+        who needs drugs when i can look at your eyes elena?
+      </marquee>
+    </div>
+    <nav class="main-nav">
+      <ul class="left-nav">
+        <li><a href="index.html">Portfolio</a></li>
+        <li><a href="boutique.html">Boutique</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="logo-container">
+        <img src="logo-chat.png" alt="Logo Hikaïa">
+      </div>
+      <ul class="right-nav"></ul>
     </nav>
   </header>
 
-  <main>
-    <h2>Bienvenue</h2>
-    <p>Portfolio de créations artistiques et visuelles.</p>
-    <p>Découvre mes derniers projets et drops exclusifs.</p>
+  <!-- PORTFOLIO GRID -->
+  <main class="portfolio-grid">
+    <div class="portfolio-item">
+      <img src="img1.jpg" alt="Projet 1">
+    </div>
+    <div class="portfolio-item">
+      <img src="img2.jpg" alt="Projet 2">
+    </div>
+    <div class="portfolio-item">
+      <img src="img3.jpg" alt="Projet 3">
+    </div>
+    <div class="portfolio-item">
+      <img src="img4.jpg" alt="Projet 4">
+    </div>
+    <!-- Tu peux dupliquer des blocs ici pour plus de visuels -->
   </main>
-
-  <footer>
-    <p>© Hikaïa – Tous droits réservés</p>
-  </footer>
 </body>
 </html>
