--- a/boutique.html
+++ b/boutique.html
@@ -4,217 +4,178 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Poster MBK – Studio Hikaïa</title>
-  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       background-color: #000;
       color: white;
-      font-family: 'Helvetica Neue', sans-serif;
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
     }
     header {
-      width: 100%;
-      background-color: #000;
-      color: white;
-      font-family: 'Helvetica Neue', sans-serif;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      position: relative;
+      background: black;
+      padding: 20px 0 10px;
+      text-align: center;
     }
-    .top-marquee {
-      background-color: #000;
-      color: white;
-      padding: 5px 0;
-      font-size: 14px;
-      text-transform: uppercase;
-      border-bottom: 1px solid #444;
-    }
-    .main-nav {
+    nav {
       display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 15px 40px;
+      justify-content: center;
+      gap: 50px;
+      margin-bottom: 10px;
     }
-    .main-nav ul {
-      display: flex;
-      gap: 20px;
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    .main-nav a {
-      color: white;
+    nav a {
       text-decoration: none;
-      font-weight: 500;
-      font-size: 15px;
+      color: white;
+      font-weight: bold;
+      font-size: 14px;
     }
-    .logo-container img {
-      height: 40px;
-      filter: brightness(0) invert(1);
-    }
-
-    .container {
-      display: flex;
-      padding: 60px;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 60px;
-    }
-    .gallery {
-      max-width: 500px;
-      flex: 1;
-    }
-    .gallery img {
+    .marquee {
       width: 100%;
-      height: auto;
-      border-radius: 5px;
+      white-space: nowrap;
+      overflow: hidden;
+      box-sizing: border-box;
+      border-top: 1px solid white;
+      border-bottom: 1px solid white;
+      padding: 8px 0;
     }
-    .thumbnails {
+    .marquee span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: marquee 15s linear infinite;
+    }
+    @keyframes marquee {
+      0% { transform: translateX(0%); }
+      100% { transform: translateX(-100%); }
+    }
+    .product-container {
       display: flex;
-      gap: 10px;
-      margin-top: 10px;
+      flex-wrap: wrap;
+      padding: 40px;
+      max-width: 1100px;
+      margin: 0 auto;
+      align-items: flex-start;
+      gap: 40px;
     }
-    .thumbnails img {
-      width: 80px;
-      height: 80px;
-      object-fit: cover;
-      cursor: pointer;
+    .product-image {
+      flex: 1;
+      max-width: 500px;
+    }
+    .product-image img {
+      width: 100%;
       border-radius: 5px;
-      opacity: 0.5;
-      transition: opacity 0.3s;
-    }
-    .thumbnails img.active {
-      opacity: 1;
-      border: 1px solid white;
     }
     .product-details {
       flex: 1;
+      max-width: 400px;
     }
-    .product-details h1 {
+    .product-title {
       font-size: 28px;
-      font-weight: 700;
-      margin-bottom: 5px;
+      font-weight: bold;
+      margin-bottom: 10px;
     }
     .stock {
       color: white;
       font-size: 14px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
+      margin-bottom: 20px;
     }
-    .stock::before {
-      content: "";
-      width: 8px;
-      height: 8px;
-      background-color: lime;
+    .dot {
+      height: 10px;
+      width: 10px;
+      background-color: #00ff00;
       border-radius: 50%;
       display: inline-block;
+      margin-right: 8px;
     }
-    .selectors {
-      margin: 20px 0;
+    .options {
+      margin-bottom: 20px;
     }
-    .selectors label {
-      display: block;
-      margin-bottom: 10px;
+    .options label {
       font-size: 14px;
-      text-transform: uppercase;
-      color: #aaa;
+      display: block;
+      margin-bottom: 5px;
     }
-    .option-group {
+    .button-group {
       display: flex;
       gap: 10px;
+      margin-bottom: 20px;
     }
-    .option-group button {
-      background: transparent;
-      color: white;
+    .option-btn {
+      padding: 8px 16px;
       border: 1px solid white;
-      border-radius: 9999px;
-      padding: 8px 18px;
+      border-radius: 25px;
+      background-color: black;
+      color: white;
       cursor: pointer;
-      font-size: 14px;
-      transition: all 0.3s ease;
     }
-    .option-group button.selected {
+    .option-btn.selected {
+      font-weight: bold;
       border: 2px solid white;
-      font-weight: 600;
     }
-    .price-button {
-      margin-top: 20px;
-    }
-    .price-button a {
-      display: inline-block;
-      background: white;
+    .buy-btn {
+      padding: 12px;
+      background-color: white;
       color: black;
-      text-align: center;
-      text-decoration: none;
-      padding: 12px 25px;
-      font-weight: 600;
+      font-weight: bold;
       font-size: 16px;
+      border: none;
       border-radius: 5px;
+      cursor: pointer;
+      margin-bottom: 20px;
     }
     .description {
-      margin-top: 25px;
       font-size: 14px;
-      color: #ccc;
+      color: white;
     }
   </style>
+  <script>
+    window.onload = () => {
+      const buttons = document.querySelectorAll('.option-btn');
+      buttons.forEach(btn => {
+        btn.addEventListener('click', () => {
+          buttons.forEach(b => b.classList.remove('selected'));
+          btn.classList.add('selected');
+        });
+      });
+    }
+  </script>
 </head>
 <body>
-  <!-- HEADER -->
   <header>
-    <div class="top-marquee">
-      <marquee behavior="scroll" direction="left">
-        who needs drugs when i can look at your eyes elena?
-      </marquee>
-    </div>
-    <nav class="main-nav">
-      <ul class="left-nav">
-        <li><a href="index.html">Portfolio</a></li>
-        <li><a href="boutique.html">Boutique</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-      <div class="logo-container">
-        <img src="logo-chat.png" alt="Logo Hikaïa">
-      </div>
-      <ul class="right-nav"></ul>
+    <nav>
+      <a href="index.html">Portfolio</a>
+      <a href="boutique.html">Boutique</a>
+      <a href="contact.html">Contact</a>
     </nav>
+    <div class="marquee">
+      <span>WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </span>
+    </div>
   </header>
 
-  <!-- PAGE PRODUIT -->
-  <main class="container">
-    <div class="gallery">
-      <img id="main-img" src="poster-mbk.jpg" alt="Poster MBK">
-      <div class="thumbnails">
-        <img src="poster-mbk.jpg" class="active" onclick="switchImage(this)">
-        <img src="poster-levres.jpg" onclick="switchImage(this)">
-        <img src="extra1.jpg" onclick="switchImage(this)">
-        <img src="extra2.jpg" onclick="switchImage(this)">
-      </div>
+  <div class="product-container">
+    <div class="product-image">
+      <img src="poster1.jpg" alt="Poster MBK">
     </div>
-
     <div class="product-details">
-      <h1>Poster "MBK"</h1>
-      <div class="stock">Item is in stock</div>
+      <div class="product-title">Poster "MBK"</div>
+      <div class="stock"><span class="dot"></span>Item is in stock</div>
 
-      <div class="selectors">
-        <label>Choix :</label>
-        <div class="option-group">
-          <button class="selected" onclick="selectChoice(this)">1</button>
-          <button onclick="selectChoice(this)">2</button>
+      <div class="options">
+        <label>CHOIX :</label>
+        <div class="button-group">
+          <button class="option-btn selected">1</button>
+          <button class="option-btn">2</button>
         </div>
       </div>
 
-      <div class="selectors">
-        <label>Taille :</label>
-        <div class="option-group">
-          <button class="selected">40x60cm</button>
+      <div class="options">
+        <label>TAILLE :</label>
+        <div class="button-group">
+          <button class="option-btn selected">40x60cm</button>
         </div>
       </div>
 
-      <div class="price-button">
-        <a href="https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402">Buy now – 25€</a>
-      </div>
+      <button class="buy-btn">Buy now — 25€</button>
 
       <div class="description">
         Poster artistique – édition exclusive signée Studio Hikaïa.<br>
@@ -224,19 +185,6 @@
         • No return & refund
       </div>
     </div>
-  </main>
-
-  <script>
-    function switchImage(el) {
-      document.getElementById('main-img').src = el.src;
-      document.querySelectorAll('.thumbnails img').forEach(img => img.classList.remove('active'));
-      el.classList.add('active');
-    }
-
-    function selectChoice(btn) {
-      document.querySelectorAll('.option-group button').forEach(b => b.classList.remove('selected'));
-      btn.classList.add('selected');
-    }
-  </script>
+  </div>
 </body>
 </html>
