--- a/boutique.html
+++ b/boutique.html
@@ -2,189 +2,200 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Poster MBK – Studio Hikaïa</title>
   <style>
     body {
-      background-color: #000;
-      color: white;
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
+      background-color: black;
+      font-family: Arial, sans-serif;
+      color: white;
     }
+
+    .ticker {
+      overflow: hidden;
+      white-space: nowrap;
+      box-sizing: border-box;
+      border-bottom: 1px solid white;
+      font-size: 13px;
+    }
+
+    .ticker span {
+      display: inline-block;
+      padding-left: 100%;
+      animation: scroll 20s linear infinite;
+    }
+
+    @keyframes scroll {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+
     header {
-      position: relative;
-      background: black;
-      padding: 20px 0 10px;
       text-align: center;
+      padding: 20px 0;
     }
+
     nav {
       display: flex;
       justify-content: center;
-      gap: 50px;
-      margin-bottom: 10px;
-    }
-    nav a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-      font-size: 14px;
-    }
-    .marquee {
-      width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      box-sizing: border-box;
-      border-top: 1px solid white;
-      border-bottom: 1px solid white;
-      padding: 8px 0;
-    }
-    .marquee span {
-      display: inline-block;
-      padding-left: 100%;
-      animation: marquee 15s linear infinite;
-    }
-    @keyframes marquee {
-      0% { transform: translateX(0%); }
-      100% { transform: translateX(-100%); }
-    }
-    .product-container {
-      display: flex;
-      flex-wrap: wrap;
-      padding: 40px;
-      max-width: 1100px;
-      margin: 0 auto;
-      align-items: flex-start;
-      gap: 40px;
-    }
-    .product-image {
-      flex: 1;
-      max-width: 500px;
-    }
-    .product-image img {
-      width: 100%;
-      border-radius: 5px;
-    }
-    .product-details {
-      flex: 1;
-      max-width: 400px;
-    }
-    .product-title {
-      font-size: 28px;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .stock {
-      color: white;
+      gap: 30px;
       font-size: 14px;
       margin-bottom: 20px;
     }
-    .dot {
-      height: 10px;
-      width: 10px;
-      background-color: #00ff00;
-      border-radius: 50%;
-      display: inline-block;
-      margin-right: 8px;
+
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
     }
+
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 40px;
+      gap: 60px;
+    }
+
+    .image {
+      max-width: 460px;
+    }
+
+    .image img {
+      width: 100%;
+      border-radius: 8px;
+    }
+
+    .product {
+      max-width: 350px;
+    }
+
+    .product h1 {
+      font-size: 22px;
+      margin-bottom: 8px;
+    }
+
+    .stock {
+      font-size: 13px;
+      color: white;
+      margin-bottom: 20px;
+    }
+
+    .stock::before {
+      content: "● ";
+      color: limegreen;
+    }
+
     .options {
       margin-bottom: 20px;
     }
-    .options label {
-      font-size: 14px;
-      display: block;
-      margin-bottom: 5px;
+
+    .label {
+      font-size: 13px;
+      margin-bottom: 6px;
     }
-    .button-group {
+
+    .buttons {
       display: flex;
       gap: 10px;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
-    .option-btn {
-      padding: 8px 16px;
+
+    .buttons button {
+      padding: 8px 14px;
+      border-radius: 50px;
       border: 1px solid white;
-      border-radius: 25px;
-      background-color: black;
+      background: none;
       color: white;
       cursor: pointer;
+      font-size: 13px;
     }
-    .option-btn.selected {
+
+    .buttons button.selected {
       font-weight: bold;
-      border: 2px solid white;
+      border: 1.5px solid white;
     }
-    .buy-btn {
-      padding: 12px;
-      background-color: white;
+
+    .buy-button {
+      background: white;
       color: black;
-      font-weight: bold;
-      font-size: 16px;
       border: none;
-      border-radius: 5px;
+      padding: 10px 25px;
+      border-radius: 6px;
       cursor: pointer;
-      margin-bottom: 20px;
-    }
-    .description {
       font-size: 14px;
-      color: white;
+      font-weight: bold;
+      margin: 20px 0;
+    }
+
+    .desc {
+      font-size: 13px;
+      line-height: 1.6;
+    }
+
+    .desc ul {
+      margin: 10px 0 0 0;
+      padding: 0;
+      list-style: none;
+    }
+
+    .desc li::before {
+      content: "• ";
     }
   </style>
-  <script>
-    window.onload = () => {
-      const buttons = document.querySelectorAll('.option-btn');
-      buttons.forEach(btn => {
-        btn.addEventListener('click', () => {
-          buttons.forEach(b => b.classList.remove('selected'));
-          btn.classList.add('selected');
-        });
-      });
-    }
-  </script>
 </head>
 <body>
+
+  <div class="ticker">
+    <span>WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </span>
+  </div>
+
   <header>
+    <img src="logo-chat.png" alt="Logo" height="40"/>
     <nav>
       <a href="index.html">Portfolio</a>
       <a href="boutique.html">Boutique</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <div class="marquee">
-      <span>WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </span>
-    </div>
   </header>
 
-  <div class="product-container">
-    <div class="product-image">
-      <img src="poster1.jpg" alt="Poster MBK">
+  <div class="container">
+    <div class="image">
+      <img src="extra1.jpg" alt="Poster MBK"/>
     </div>
-    <div class="product-details">
-      <div class="product-title">Poster "MBK"</div>
-      <div class="stock"><span class="dot"></span>Item is in stock</div>
+
+    <div class="product">
+      <h1>Poster "MBK"</h1>
+      <div class="stock">Item is in stock</div>
 
       <div class="options">
-        <label>CHOIX :</label>
-        <div class="button-group">
-          <button class="option-btn selected">1</button>
-          <button class="option-btn">2</button>
+        <div class="label">CHOIX :</div>
+        <div class="buttons">
+          <button class="selected">1</button>
+          <button>2</button>
+        </div>
+
+        <div class="label">TAILLE :</div>
+        <div class="buttons">
+          <button class="selected">40x60cm</button>
         </div>
       </div>
 
-      <div class="options">
-        <label>TAILLE :</label>
-        <div class="button-group">
-          <button class="option-btn selected">40x60cm</button>
-        </div>
-      </div>
+      <button class="buy-button">Buy now — 25€</button>
 
-      <button class="buy-btn">Buy now — 25€</button>
-
-      <div class="description">
+      <div class="desc">
         Poster artistique – édition exclusive signée Studio Hikaïa.<br>
-        25 exemplaires seulement.<br><br>
-        • ALL SALES ARE FINAL :)<br>
-        • 1/2 WEEKS DELIVERY<br>
-        • No return & refund
+        25 exemplaires seulement.
+        <ul>
+          <li>ALL SALES ARE FINAL :)</li>
+          <li>1/2 WEEKS DELIVERY</li>
+          <li>No return & refund</li>
+        </ul>
       </div>
     </div>
   </div>
+
 </body>
 </html>
