--- a/boutique.html
+++ b/boutique.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Poster MBK – Studio Hikaïa</title>
   <style>
     body {
@@ -33,7 +33,7 @@
 
     header {
       text-align: center;
-      padding: 20px 0;
+      padding: 20px 0 10px 0;
     }
 
     nav {
@@ -52,20 +52,44 @@
 
     .container {
       display: flex;
-      flex-direction: row;
       justify-content: center;
       align-items: flex-start;
-      padding: 40px;
       gap: 60px;
+      padding: 40px;
     }
 
-    .image {
-      max-width: 460px;
+    .carousel {
+      position: relative;
+      max-width: 400px;
     }
 
-    .image img {
+    .carousel img {
       width: 100%;
       border-radius: 8px;
+      display: none;
+    }
+
+    .carousel img.active {
+      display: block;
+    }
+
+    .arrows {
+      display: flex;
+      justify-content: space-between;
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      transform: translateY(-50%);
+      pointer-events: none;
+    }
+
+    .arrows button {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 22px;
+      pointer-events: auto;
+      cursor: pointer;
     }
 
     .product {
@@ -147,13 +171,12 @@
   </style>
 </head>
 <body>
-
   <div class="ticker">
     <span>WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </span>
   </div>
 
   <header>
-    <img src="logo-chat.png" alt="Logo" height="40"/>
+    <img src="logo-chat.png" alt="Logo" height="40" />
     <nav>
       <a href="index.html">Portfolio</a>
       <a href="boutique.html">Boutique</a>
@@ -162,8 +185,13 @@
   </header>
 
   <div class="container">
-    <div class="image">
-      <img src="extra1.jpg" alt="Poster MBK"/>
+    <div class="carousel">
+      <img src="extra1.jpg" alt="Poster MBK" class="active" />
+      <img src="extra2.jpg" alt="Poster MBK" />
+      <div class="arrows">
+        <button onclick="prevImage()">‹</button>
+        <button onclick="nextImage()">›</button>
+      </div>
     </div>
 
     <div class="product">
@@ -186,7 +214,7 @@
       <button class="buy-button">Buy now — 25€</button>
 
       <div class="desc">
-        Poster artistique – édition exclusive signée Studio Hikaïa.<br>
+        Poster artistique – édition exclusive signée Studio Hikaïa.<br />
         25 exemplaires seulement.
         <ul>
           <li>ALL SALES ARE FINAL :)</li>
@@ -197,5 +225,25 @@
     </div>
   </div>
 
+  <script>
+    const images = document.querySelectorAll('.carousel img');
+    let currentIndex = 0;
+
+    function showImage(index) {
+      images.forEach((img, i) => {
+        img.classList.toggle('active', i === index);
+      });
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % images.length;
+      showImage(currentIndex);
+    }
+
+    function prevImage() {
+      currentIndex = (currentIndex - 1 + images.length) % images.length;
+      showImage(currentIndex);
+    }
+  </script>
 </body>
 </html>
