--- a/boutique.html
+++ b/boutique.html
@@ -36,10 +36,13 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
     }
     .menu {
       display: flex;
       gap: 20px;
+      order: 1;
+      flex: 1;
     }
     .menu a {
       color: #fff;
@@ -50,6 +53,9 @@
     .logo {
       width: 40px;
       height: 40px;
+      margin: 0 auto;
+      display: block;
+      order: 2;
     }
     .container {
       display: flex;
@@ -62,7 +68,7 @@
     }
     .carousel {
       position: relative;
-      width: 400px;
+      width: 360px;
     }
     .carousel img {
       width: 100%;
@@ -125,7 +131,7 @@
       border-radius: 50%;
     }
     .options, .size {
-      margin: 20px 0;
+      margin: 25px 0 15px;
     }
     .option-btn, .size-btn {
       padding: 8px 16px;
@@ -142,17 +148,23 @@
     }
     .buy-btn {
       margin-top: 20px;
-      padding: 12px 24px;
+      padding: 14px 30px;
       background-color: white;
       color: black;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
+      font-size: 16px;
     }
     .note {
       font-size: 0.9em;
       margin-top: 20px;
+    }
+    .price-label {
+      font-size: 18px;
+      margin: 10px 0 5px;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -187,20 +199,21 @@
     </div>
     <div class="product-details">
       <h2>Poster "MBK"</h2>
+      <div class="price-label">25€</div>
       <div class="status">
         <div class="status-dot"></div>
         <span>Item is in stock</span>
       </div>
       <div class="options">
-        <label>CHOIX :</label><br>
+        <label style="margin-bottom: 8px; display: inline-block;">CHOIX :</label><br>
         <button class="option-btn active" onclick="selectPoster(0)">1</button>
         <button class="option-btn" onclick="selectPoster(1)">2</button>
       </div>
       <div class="size">
-        <label>TAILLE :</label><br>
+        <label style="margin-bottom: 8px; display: inline-block;">TAILLE :</label><br>
         <button class="size-btn active">40x60cm</button>
       </div>
-      <button class="buy-btn" onclick="location.href='https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402'">Buy now – 25€</button>
+      <button class="buy-btn" onclick="location.href='https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402'">Buy now</button>
       <div class="note">
         Poster artistique – édition exclusive signée Studio Hikaïa. 25 exemplaires seulement.<br><br>
         • ALL SALES ARE FINAL :)<br>
