--- a/boutique.html
+++ b/boutique.html
@@ -19,16 +19,19 @@
       background-color: black;
       padding: 10px 0;
       z-index: 1000;
+      overflow: hidden;
+    }
+    .marquee-track {
+      display: flex;
+      animation: scrollText 30s linear infinite;
+      white-space: nowrap;
+      gap: 60px;
     }
     .marquee-text {
-      display: inline-block;
-      padding-left: 100%;
-      white-space: nowrap;
-      animation: scrollText 15s linear infinite;
       font-size: 12px;
     }
     @keyframes scrollText {
-      0% { transform: translateX(0); }
+      0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
     }
     header {
@@ -41,7 +44,6 @@
     .menu {
       display: flex;
       gap: 20px;
-      order: 1;
       flex: 1;
     }
     .menu a {
@@ -55,7 +57,9 @@
       height: 40px;
       margin: 0 auto;
       display: block;
-      order: 2;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
     }
     .container {
       display: flex;
@@ -147,15 +151,15 @@
       border-color: white;
     }
     .buy-btn {
-      margin-top: 20px;
-      padding: 14px 30px;
+      margin-top: 30px;
+      padding: 16px 40px;
       background-color: white;
       color: black;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
-      font-size: 16px;
+      font-size: 17px;
     }
     .note {
       font-size: 0.9em;
@@ -170,7 +174,12 @@
 </head>
 <body>
   <div class="marquee-container">
-    <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA? — </div>
+    <div class="marquee-track">
+      <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+    </div>
   </div>
   <header>
     <div class="menu">
@@ -205,12 +214,12 @@
         <span>Item is in stock</span>
       </div>
       <div class="options">
-        <label style="margin-bottom: 8px; display: inline-block;">CHOIX :</label><br>
+        <label style="margin-bottom: 12px; display: inline-block;">CHOIX :</label><br>
         <button class="option-btn active" onclick="selectPoster(0)">1</button>
         <button class="option-btn" onclick="selectPoster(1)">2</button>
       </div>
       <div class="size">
-        <label style="margin-bottom: 8px; display: inline-block;">TAILLE :</label><br>
+        <label style="margin-bottom: 12px; display: inline-block;">TAILLE :</label><br>
         <button class="size-btn active">40x60cm</button>
       </div>
       <button class="buy-btn" onclick="location.href='https://buy.stripe.com/cNi6oJ7HZ8a24Lhat038402'">Buy now</button>
