--- a/boutique.html
+++ b/boutique.html
@@ -25,7 +25,8 @@
       display: flex;
       animation: scrollText 30s linear infinite;
       white-space: nowrap;
-      gap: 60px;
+      gap: 120px;
+      transform: translateX(-50%);
     }
     .marquee-text {
       font-size: 12px;
@@ -127,12 +128,19 @@
       display: flex;
       align-items: center;
       gap: 8px;
+      font-size: 11px;
+      margin: 10px 0;
     }
     .status-dot {
-      width: 10px;
-      height: 10px;
+      width: 8px;
+      height: 8px;
       background-color: #0f0;
       border-radius: 50%;
+    }
+    .price-label {
+      font-size: 18px;
+      margin-bottom: 15px;
+      font-weight: 600;
     }
     .options, .size {
       margin: 25px 0 15px;
@@ -151,7 +159,7 @@
       border-color: white;
     }
     .buy-btn {
-      margin-top: 30px;
+      margin-top: 20px;
       padding: 16px 40px;
       background-color: white;
       color: black;
@@ -159,16 +167,11 @@
       border-radius: 30px;
       cursor: pointer;
       font-weight: bold;
-      font-size: 17px;
+      font-size: 18px;
     }
     .note {
       font-size: 0.9em;
       margin-top: 20px;
-    }
-    .price-label {
-      font-size: 18px;
-      margin: 10px 0 5px;
-      font-weight: 600;
     }
   </style>
 </head>
@@ -176,9 +179,11 @@
   <div class="marquee-container">
     <div class="marquee-track">
       <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text"> </div>
       <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text"> </div>
       <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
-      <div class="marquee-text">WHO NEEDS DRUGS WHEN I CAN LOOK AT YOUR EYES ELENA?</div>
+      <div class="marquee-text"> </div>
     </div>
   </div>
   <header>
@@ -208,11 +213,11 @@
     </div>
     <div class="product-details">
       <h2>Poster "MBK"</h2>
-      <div class="price-label">25€</div>
       <div class="status">
         <div class="status-dot"></div>
         <span>Item is in stock</span>
       </div>
+      <div class="price-label">25€</div>
       <div class="options">
         <label style="margin-bottom: 12px; display: inline-block;">CHOIX :</label><br>
         <button class="option-btn active" onclick="selectPoster(0)">1</button>
