--- a/boutique.html
+++ b/boutique.html
@@ -61,6 +61,9 @@
       left: 50%;
       transform: translateX(-50%);
     }
+    .logo-link {
+      display: inline-block;
+    }
     @media (max-width: 600px) {
       header {
         flex-direction: column;
@@ -208,7 +211,9 @@
       <a href="boutique.html">Boutique</a>
       <a href="contact.html">Contact</a>
     </div>
-    <img src="logo-chat.png" alt="Logo Hikaïa" class="logo">
+    <a href="index.html" class="logo-link">
+      <img src="logo-chat.png" alt="Logo Hikaïa" class="logo">
+    </a>
   </header>
   <div class="container">
     <div>
