--- a/boutique.html
+++ b/boutique.html
@@ -81,7 +81,7 @@
 <body>
   <header>
     <div class="logo-container">
-      <a href="index.html"><img src="assets/logo-hikaia.png" alt="Logo Hikaïa"></a>
+      <a href="index.html"><img src="assets/logo-chat.png" alt="Logo Hikaïa"></a>
     </div>
     <div class="scrolling-text">
       <p>
