--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,8 @@
 
   <div class="contact-container">
     <h1>Contact me</h1>
-    <p>📧 <a href="mailto:elena@hikaia.fr">elena@hikaia.fr</a></p>
-    <p>📸 <a href="https://instagram.com/elenambk_" target="_blank">@elenambk_</a></p>
+    <p>📩 <a href="mailto:elena@hikaia.fr">elena@hikaia.fr</a></p>
+    <p>📲 <a href="https://instagram.com/elenambk_" target="_blank">@elenambk_</a></p>
   </div>
 </body>
 </html>
